Fixed a Layout and Font Issue
- In loading states the skeletons were overflowing the container in mobile so added `flex-wrap` to fix that.
- Fonts were not registering in Safari, needed to move the CSS declaration to @theme

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,10 +5,14 @@
 @import "../../node_modules/preline/variants.css";
 @source "../../node_modules/preline/dist/*.js";
 
-@custom-variant dark (&:is(.dark *));
-
 @plugin "@tailwindcss/typography";
 @plugin "@tailwindcss/forms";
+
+@custom-variant dark (&:is(.dark *));
+
+@theme {
+	--default-font-family: "RedditSans", system-ui, -apple-system, sans-serif;
+}
 
 :root {
 	--radius: 0.625rem;
@@ -67,9 +71,6 @@
 }
 
 @theme inline {
-	--default-font-family:
-		"Reddit Sans", ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
-		Roboto, Helvetica, Arial, sans-serif;
 	--radius-sm: calc(var(--radius) - 8px);
 	--radius-md: calc(var(--radius) - 6px);
 	--radius-lg: var(--radius);
